# fastz_api

./: .coverage  README.md  pyproject.toml
fastz_api/: app.py
tests/: test_app.py
